[package]
name = "bevy-cursor"
version = "0.0.0"
edition = "2021"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = ["bevy_render"]

[features]
dev = ["bevy/default"]

[[example]]
name = "2d"
required-features = ["bevy/default"]

[[example]]
name = "3d"
required-features = ["bevy/default"]
