[package]
name = "bevy-cursor"
version = "0.1.0"
authors = ["Harenayo"]
edition = "2021"
description = "A simple crate for cursor rays in Bevy"
readme = "README.md"
repository = "https://github.com/harenayo/bevy-cursor"
license = "MIT"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = ["bevy_render"]

[features]
dev = ["bevy/default"]

[[example]]
name = "2d"
required-features = ["bevy/default"]

[[example]]
name = "3d"
required-features = ["bevy/default"]
